# yapcli

./: .env.example  .gitignore  CONTRIBUTING.md  PACKAGE_SETUP.md  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  ci.yml  publish.yml
frontend/: package-lock.json
frontend/src/: App.tsx  dataUtilities.ts
scripts/: build_frontend.py  prepare_package.py
tests/: __init__.py  conftest.py  test_package_config.py  test_packaging.py  test_server_env_resolution.py  test_server_products_prune.py
tests/scripts/: __init__.py  conftest.py  test_frontend_build_timeout.py  test_package_config.py  test_packaging.py
tests/yapcli/: test_cli.py  test_server_env_resolution.py  test_server_investments_transactions_dates.py  test_server_link_token_days_requested.py  test_server_products_prune.py  test_server_transactions_sync_empty_next_cursor.py
tests/yapcli/cli/: conftest.py  test_balances.py  test_balances_get.py  test_config.py  test_global_env_flags.py  test_holdings.py  test_investment_transactions.py  test_link.py  test_listing.py  test_main.py  test_ping.py  test_transactions.py
yapcli/: __init__.py  __main__.py  accounts.py  cli.py  env.py  frontend_proxy.py  institutions.py  logging.py  secrets.py  server.py  utils.py
yapcli/cli/: __init__.py  backend.py  balances.py  config.py  holdings.py  investment_transactions.py  link.py  listing.py  main.py  ping.py  transactions.py
