[build-system]
requires = ["poetry-core>=2.3.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "yapcli"
version = "0.1.0"
description = "Yet another Plaid CLI."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Michael Kane", email = "thisismikekane@gmail.com" }
]
dependencies = [
  "typer[all]>=0.12.3",
]

[project.scripts]
py-plaid = "yapcli.cli:app"

[project.urls]
Homepage = "https://github.com/thisIsMikeKane/plaid-cli-python"

[dependency-groups]
lint = [
  "black>=24.3",
  "ruff>=0.5.0",
]

typecheck = [
  "mypy>=1.10",
]

test = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-sugar>=1.0",
]

tox = [
  "tox>=3.30",
]

dev = [
  "pip>=24.2",
  "pre-commit>=3.7",
  { include-group = "lint" },
  { include-group = "typecheck" },
  { include-group = "test" },
  { include-group = "tox" },
]